force-app/main/default/objects/Expense_Tracker__c/Expense_Tracker__c.object-meta.xml
<CustomObject>
    <description>Tracks personal or business expenses with category, price, date, and payment method.</description>
    <label>Expense Tracker</label>
    <nameField>
        <label>Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <allowReports>true</allowReports>
</CustomObject>