force-app/main/default/objects/Expense_Tracker__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Date when the expense occurred</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>